@@ -1,5 +1,6 @@
 package com.challenge.rental_cars_spring_api.core.queries;
 
+import com.challenge.rental_cars_spring_api.core.queries.dtos.ListarAlugueisQueryResultItem;
 import com.challenge.rental_cars_spring_api.core.queries.dtos.ListarCarrosQueryResultItem;
 import com.challenge.rental_cars_spring_api.infrastructure.repositories.CarroRepository;
 import lombok.RequiredArgsConstructor;
@@ -9,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,9 +26,9 @@ public class ListarCarrosQuery {
     }
 
     @Transactional(readOnly = true)
-    public List<ListarCarrosQueryResultItem> execute() {
-        return carroRepository.findAll().stream()
-                .map(ListarCarrosQueryResultItem::from)
-                .collect(Collectors.toList());
+    public List<String> execute() {
+        return carroRepository.findDistinctModelos()
+                .stream()
+                .map(String::toString).toList();
     }
 }
